# lens-optics-profiling

./: .gitignore  CHANGELOG.md  LICENSE  flake.nix  lens-profiling.cabal  readme.md
app/: Main-lens.hs  Main-optics.hs
